hphp/test/zend/bad/Zend/tests/errmsg_010.php
<?php

class test {
	private protected function foo() {}
}

echo "Done\n";
?>